# unityfs

./: Cargo.toml  README.md
src/: assets.rs  bundle.rs  common_string.rs  extractor.rs  fallback_typetree.rs  lib.rs  math.rs  objectreader.rs  reader.rs  serializedfile.rs  typetree.rs  unity_version.rs  value.rs
src/classes/: gameobject.rs  mesh.rs  mod.rs  skinned_mesh_renderer.rs  sprite.rs  texture2d.rs  transform.rs  videoclip.rs
