[package]
name = "unityfs"
version = "0.1.1"
edition = "2024"
description = "A pure Rust library for parsing, reading, and extracting assets from Unity serialized files and AssetBundles"
license = "MIT"
repository = "https://github.com/lmmtrr/unityfs"
readme = "README.md"

[dependencies]
half = "2.7"
lz4_flex = "0.13"
once_cell = "1.21"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crc32fast = "1.5"
lzma-rs = "0.3"
image = "0.25"
png = "0.18"
texture2ddecoder = "0.1"
memmap2 = "0.9"
